added input page

--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -49,8 +49,9 @@
     <body>
         <h1><div style="text-align: center;">Fwibisono87's Viddownloader</div></h1>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/input">Input</a></li>
         </ul>
     </body>
 </html>
