--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,6 @@
     </head>
     <body style="alignment: center">
         {% include "/includes/_header.html" %}
-    <p> this is a home page
-    </p>
+        <p>this is an about page</p>
     </body>
 </html>
