--- a/templates/input.html
+++ b/templates/input.html
@@ -7,17 +7,25 @@
 
     <div style="text-align: center;">
         <body >
-             {% include 'includes/_navbar.html' %}
+             {% include 'includes/_header.html' %}
              <h2 style="text-align: left;">Download Video</h2>
              <div>
-                 <hr />
+                 <hr/>
                     <p>Insert your link in the space below:</p>
              </div>
-             <hr />
+             <hr/>
              <div style="text-align: center;">
               <pre>
                  <form action="/inres" method="POST" style="align-content: center;">
-                    URL   :   <input type="text" name = "URL"><br><br>
+                     URL   :   <input type="text" name = "URL"><br><br>
+                     Res   :   <select>
+                                    <option value = "1080p">1080p</option>
+                                    <option value = "720p">720p</option>
+                                    <option value = "480p">480p</option>
+                                    <option value = "360p">360p</option>
+                                    <option value = "240p">240p</option>
+                                    <option value = "144p">144p</option>
+                                </select>
                     <input type = "submit" value="Submit">
                  </form>
               </pre>
