added wait message on download page

--- a/templates/download.html
+++ b/templates/download.html
@@ -19,6 +19,7 @@
                  <form action="/finish" method="POST">
                     <input type = "submit" value="Download">
                  </form>
+                  <p>Please allow for up to 2 minutes for the server to prepare your download</p>
               </pre>
             </div>
         </body>
