fixed download message

--- a/templates/input.html
+++ b/templates/input.html
@@ -21,6 +21,7 @@
                      <hr/>
                     <input type = "submit" value="Submit">
                  </form>
+                  <p>Please allow for up to 2 minutes for the server to prepare your download</p>
               </pre>
             </div>
         </body>
