--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,16 @@
     </head>
     <body style="alignment: center">
         {% include "/includes/_header.html" %}
-    <p> this is a home page
-    </p>
+    <h2>
+        Hello!
+    </h2>
+    <h3>Welcome to Fwibisono87's <del>YouTube</del> Video Downloader!</h3>
+    <p>This is a barebones, yet robust system!</p>
+        <p>To start downloading videos, click <a href = /input>here!</a></p>
+    <hr/>
+    <p>Features and Planned Features:</p>
+    <p>View on the <a href="https://github.com/fwibisono87/viddownloader-mk2">GitHub Page!</a> </p>
+
+    </ol>
     </body>
 </html>
